fix vertical overlap on blog page

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,7 +43,6 @@ html {
 
   .blog-box {
     height: auto;
-    height: 250px;
     padding: 0px;
     position: relative;
     top:0px;
